--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: "Geospatial Analyzer & Data Scientist"
+description: "Kimia Chenary"
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
