--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Kimia Chenary"
-description: "Spatial Analyzer & Data Scientist"
+description: "Urban Planner & Data Scientist"
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
